# smartcontrol_automated_processing

./: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml  start.sh
core/: settings.py
data_storage/: SRH - 2-6-2026.xls  data.xlsx
infrastructure/frontend_mapping/: api_mapping_site.py
infrastructure/notifications/: teams_webhook_client.py
infrastructure/smartsheet/: smartsheet_client.py
interfaces/workers/: apontamento_impar.py  classificacao_he.py  problema_no_equipamento.py  temporarios.py
orchestrators/: smartsheet_dispatcher_ai.py  smartsheet_dispatcher_he.py  smartsheet_dispatcher_pe.py  smartsheet_dispatcher_temp.py
services/: treatment_rules.py
services/apontamento_impar/: apontamento_impar.py
services/classificacao_he/: posto_vago_service.py
services/extract_data_base/: extract_data_base_service.py
services/problema_no_equipamento/: falta_abono.py  falta_com_desconto_bh.py  horario_contratual_previsto.py  informar_horario_realizado.py
services/temporarios/apontamento_impar/: apontamento_impar_temp.py
services/temporarios/problema_no_equipamento/: falta_abono_temp.py  falta_com_desconto_bh_temp.py  horario_contratual_previsto_temp.py  informar_horario_realizado_temp.py
utils/: driver_factory.py  file_utils.py  selenium_utils.py  time_utils.py
